# Projteto_API_do_twitter

./: README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  teste.py
env/: pyvenv.cfg
env/Scripts/: activate  dul-receive-pack  dul-upload-pack
src/: connection.py  secrets.py  services.py
