[tool.poetry]
name = "projteto-api-do-twitter"
version = "0.1.0"
description = "teste"
authors = ["Csantos05 <133383244+Csantos05@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
tweepy = "^4.14.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pymongo = "^4.6.1"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
